--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,14 @@
 <resources>
     <string name="app_name">WeatherProject</string>
-    <string name="location_name">St.Paul,MN</string>
+    <string name="title"> My Weather App</string>
+    <string name="location">St.Paul,MN</string>
     <string name="temperature">72</string>
-    <string name="feels_like_temp">Feels like 78</string>
-    <string name="image">image</string>
-    <string name="low"> Low 65</string>
-    <string name="high">High 80</string>
-    <string name="humidity">Humidity 100%</string>
-    <string name="pressure">Pressure 1023 hPa</string>
+    <string name="feels_like">Feels like %1$s</string>
+    <string name="weather_icon">image</string>
+    <string name="low_temp"> Low %1$s</string>
+    <string name="high_temp">High %1$s</string>
+    <string name="humidity">Humidity %1$d%%</string>
+    <string name="pressure">Pressure %1$d hPa</string>
 
 
 
